Fix critical runtime errors and improve PWA functionality
- Fixed manifest.json to use SVG icons in shortcuts section
- Improved service worker redirect handling to prevent network errors
- Updated deprecated apple-mobile-web-app-capable meta tag to mobile-web-app-capable
- Fixed AdSense consent check to properly parse JSON consent data
- Enhanced error handling and logging throughout the application

This resolves icon loading errors, redirect issues, and AdSense blocking problems.

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
       "url": "/builder.html",
       "icons": [
         {
-          "src": "/icons/icon-96.png",
+          "src": "/icons/icon-96.svg",
           "sizes": "96x96"
         }
       ]
@@ -30,7 +30,7 @@
       "url": "/cover-letter.html",
       "icons": [
         {
-          "src": "/icons/icon-96.png",
+          "src": "/icons/icon-96.svg",
           "sizes": "96x96"
         }
       ]
@@ -42,7 +42,7 @@
       "url": "/ats.html",
       "icons": [
         {
-          "src": "/icons/icon-96.png",
+          "src": "/icons/icon-96.svg",
           "sizes": "96x96"
         }
       ]
