Optimize Render.com configuration for static site deployment
- Added static site keywords to package.json
- Simplified render.yaml configuration
- Removed complex headers that might cause conflicts
- This should resolve the ERR_FAILED routing issues on Render.com

--- a/package.json
+++ b/package.json
@@ -12,5 +12,7 @@
   },
   "engines": {
     "node": "22.22.0"
-  }
+  },
+  "keywords": ["resume", "ats", "builder", "static-site"],
+  "license": "MIT"
 }
