--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
   },
   "keywords": ["resume", "ats", "builder", "static-site", "frontend"],
   "license": "MIT",
-  "homepage": "https://my-ats-resume-builder.vercel.app/"
+  "homepage": "https://my-ats-resume-builder.vercel.app/",
+  "buildTime": "2025-01-24T13:35:00Z"
 }
